--- a/site/about/style.css
+++ b/site/about/style.css
@@ -8,6 +8,17 @@
 a {
   text-decoration: none;
 }
+.toggle
+{
+    display: block !important;
+}
+.burger {
+  display: none !important;
+  position: relative;
+  margin-left: auto;
+  margin-right: 1em;
+  cursor: pointer;
+}
 ul {
   list-style: none;
 }
@@ -87,6 +98,37 @@ nav a:hover {
   color: rgb(73, 223, 148);
 }
 
+.rnav
+{
+  display: none;
+  width: 175px;
+  height: 250px;
+  position: absolute;
+  bottom: auto;
+  right: 1em;
+  border: grey solid 1px;
+  border-bottom: none;
+  border-radius: 25px;
+  box-shadow: 0px 0px 15px grey;
+  overflow: hidden;
+}
+.rnav a
+{
+  height: 25%;
+  display: inline-block;
+  width: 100%;
+  
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  background: white;
+
+  border-bottom: rgba(128, 128, 128, 0.233) solid 1px;
+}
+.rnav p
+{
+  display: inline;
+}
 /*--------------------section A banner-------------------------------*/
 
 .banner {
@@ -115,13 +157,6 @@ nav a:hover {
   word-spacing: 0px;
   font-weight: 800;
 }
-.banner h3 {
-  font-size: 1.6rem;
-  word-spacing: 0.3rem;
-  letter-spacing: 0.12rem;
-  font-weight: bolder;
-}
-
 
 /*-------------------------------section B-------------------------------------*/
 
@@ -184,9 +219,14 @@ nav a:hover {
 }
 .info span
 {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     color: rgb(73, 223, 148);
 }
+.info p
+{
+  color: grey;
+}
+
 
 
 @media (max-width: 850px) {
@@ -195,6 +235,10 @@ nav a:hover {
   {
       grid-column: 1 / -1;
       padding: 0em .2em;
+  }
+  .secB
+  {
+     padding: 0em .8em;
   }
   .info
 {
@@ -208,6 +252,16 @@ nav a:hover {
   .info span
 {
     font-size: 1.1rem;
-    
+}
+.banner h1 {
+  font-size: 6rem;
+  word-spacing: 0px;
+  font-weight: 800;
+}
+
+.info span
+{
+    font-size: .7rem;
+    color: rgb(73, 223, 148);
 }
 }
