--- a/site/search/style.css
+++ b/site/search/style.css
@@ -45,6 +45,7 @@ body
 .image
 {
     width: 30%;
+    max-width: 275px;
     color: rgba(220, 220, 220, 0);
     background-image: url("../images/user.png");
     background-repeat: no-repeat;
@@ -78,16 +79,18 @@ body
 {
     height: 460px;
     flex-direction: column;
+    max-width: 400px;
 }
 .image
 {
     width: 100%;
     height: 50%;
+    margin: 0px auto;
 }
 .info
 {
     text-align: center;
-    width: 90%;
+    width: 100%;
     height: 50%;
 }
 }
