--- a/site/style.css
+++ b/site/style.css
@@ -5,6 +5,10 @@
   padding: 0;
   font-family: "Arial Narrow Bold", sans-serif;
 }
+.toggle
+{
+    display: block !important;
+}
 a {
   text-decoration: none;
 }
@@ -13,8 +17,10 @@ ul {
 }
 .burger {
   display: none !important;
+  position: relative;
   margin-left: auto;
   margin-right: 1em;
+  cursor: pointer;
 }
 .home
 {
@@ -81,6 +87,37 @@ nav a:hover {
   color: rgb(73, 223, 148);
 }
 
+.rnav
+{
+  display: none;
+  width: 175px;
+  height: 250px;
+  position: absolute;
+  bottom: auto;
+  right: 1em;
+  border: grey solid 1px;
+  border-bottom: none;
+  border-radius: 25px;
+  box-shadow: 0px 0px 15px grey;
+  overflow: hidden;
+}
+.rnav a
+{
+  height: 25%;
+  display: inline-block;
+  width: 100%;
+  
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  background: white;
+
+  border-bottom: rgba(128, 128, 128, 0.233) solid 1px;
+}
+.rnav p
+{
+  display: inline;
+}
 /*--------------------section A banner-------------------------------*/
 
 .banner {
