--- a/site/userAccount/style.css
+++ b/site/userAccount/style.css
@@ -248,3 +248,56 @@ aside
         width: 80%;
     }
 }
+
+/*------------------Modal---------------------------------*/
+
+.modal
+{
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    background-color: rgb(61, 61, 61);
+    display: none;
+
+    z-index: 10;
+}
+
+.modal div
+{
+    background-color: white;
+    width: 370px;
+    padding: 1em;
+    border-radius: 15px;
+}
+
+.modal input
+{
+    font-size: 1.1em;
+    padding:.4em;
+    display: inline-block;
+    margin: auto;
+}
+
+.modal button
+{
+    display: inline-block;
+    margin: auto;
+    padding: .5em 1.2em;
+    background: rgb(73, 223, 148);
+    color: white;
+    font-size: 1.1rem;
+    border: none;
+}
+
+.modal p
+{
+    font-size: 1.1rem;
+    margin: .4em 0em;
+}
+
+.on
+{
+    display: flex !important;
+    justify-content: space-evenly;
+    align-items: center;
+}
