--- a/site/ngoAccount/style.css
+++ b/site/ngoAccount/style.css
@@ -346,7 +346,7 @@ header div
 {
     position: absolute;
     width: 100%;
-    height: 100vh;
+    height: 1000vh;
     background-color: rgb(61, 61, 61);
     display: none;
 
@@ -356,23 +356,27 @@ header div
 .modal div
 {
     background-color: white;
-    width: 370px;
-    padding: 1em;
+    margin: 5em auto;
+    width: 330px;
+    padding: 1.5em;
     border-radius: 15px;
+    text-align: center;
 }
 
 .modal input
 {
     font-size: 1.1em;
     padding:.4em;
+    width: 100%;
     display: inline-block;
-    margin: auto;
+    margin: .2em auto;
 }
 
 .modal button
 {
     display: inline-block;
-    margin: auto;
+    width: 100%;
+    margin: .2em auto;
     padding: .5em 1.2em;
     background: rgb(73, 223, 148);
     color: white;
@@ -388,7 +392,5 @@ header div
 
 .on
 {
-    display: flex !important;
-    justify-content: space-evenly;
-    align-items: center;
+    display: block;
 }
